# ETL_Commodities

./: .gitignore  README.md  pyproject.toml  requirements.txt
dbcommodities/models/: schema.yml
dbcommodities/models/staging/: stg_commodities.sql
dw_commodities/: dbt_project.yml
dw_commodities/docs/: homepage.md
dw_commodities/models/datamart/: dm_commodities.sql  schema.yml
dw_commodities/models/staging/: schema.yml  stg_commodities.sql  stg_commodities_transactions.sql
dw_commodities/seeds/: commodities_transactions.csv
src/: extract.py  extract_load.py
